inclui logo do mario e mudanças na ui

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Jogo da memória</title>
 </head>
 <body>
+    <div class="header">
+        <img class="mario-logo" src="./img/mario-logo.svg" alt="Logotipo do Super Mario">
+        <h1>Jogo da Memória</h1>
+    </div>
     <main class="memory-game">
         <div class="card" data-card="bowser">
             <img class="card-front" src="./img/bowser.jpg" alt="Face da carta">
